# RustCounter

./: .env  .example.env  .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml
migrations/: 20231218043241_add_counts_table.sql
src/: main.rs  manager.rs  utility.rs
static/: index.html  style.css
templates/: index.html.tera
