[package]
name = "rust_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gif = "0.12.0"
rocket = "0.5.0"
base64 = "0.21.5"
png = "0.17.10"
tree_magic = "0.2.3"
sqlx = "0.7.3"

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_sqlite"]
